--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <div class="app">
+    </div>
   </body>
 </html>
