feat(components): implement QuizComponent
- Three states: QuizMenu, QuizContent, QuizResult
- Uses quiz mockup; no server connection yet

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
     <link rel="stylesheet" href="./styles/index.css" />
+    <script type="module" src="./components/QuizComponent/index.js"></script>
   </head>
   <body>
     <div class="app">
+      <quiz-component />
     </div>
   </body>
 </html>
