feat(frontend): implement ScoreboardComponent and Header
- Extract App into a separate component for state management
- Rework QuizResult to display winning message from server

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
-    <link rel="stylesheet" href="./styles/index.css" />
-    <script type="module" src="./components/QuizComponent/index.js"></script>
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <script type="module" src="./components/registerComponents.js"></script>
   </head>
   <body>
-    <div class="app">
-      <quiz-component />
-    </div>
+    <app-component />
   </body>
 </html>
