--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World</title>
+    <title>Quiz App</title>
     <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="icon" href="/public/favicon.ico" type="image/x-icon" />
     <script type="module" src="./components/registerComponents.js"></script>
   </head>
   <body>
