--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
     <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="icon" href="/public/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./../public/favicon.ico" type="image/x-icon" />
     <script type="module" src="./components/registerComponents.js"></script>
   </head>
   <body>
